Fix word break on Safari

--- a/sources/stylesheets/content/_buy-button.scss
+++ b/sources/stylesheets/content/_buy-button.scss
@@ -6,6 +6,7 @@
     // sass-lint:disable class-name-format
     .form_field {
       padding-top: 15px;
+      word-break: normal;
     }
     // sass-lint:enable class-name-format
   }
